# orchestrator-loop-for-ai

./: .gitignore  Cargo.toml  README.md  build-and-monitor-repo.sh  build-and-monitor-repos.sh  fix_sdlc.rs  fix_sdlc_old.rs  sdlc_config.yaml
.ai/orchestrator-loop-for-ai/1/: design.md  requirements.md
.ai/orchestrator-loop-for-ai/2/: design.md  requirements.md
.ai/orchestrator-loop-for-ai/4/: design.md  requirements.md
src/: agent.rs  config.rs  config_tests.rs  github.rs  html_fixer.rs  html_fixer_tests.rs  issue_context.rs  main.rs  readme_tests.rs  sdlc.rs  sdlc.rs.bak  sdlc.rs.bak2  sdlc_tests.rs  signal_handler.rs  workspace.rs  workspace_tests.rs
