[package]
name = "orchestrator-loop-for-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.45"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
crossterm = { version = "0.28", features = ["events"] }
fs2 = "0.4"
dirs = "6.0"
regex = "1.10"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3"
walkdir = "2.5"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"

